--- a/configs/logging.yaml
+++ b/configs/logging.yaml
@@ -1,10 +1,13 @@
 ---
 version: 1
 disable_existing_loggers: False
+
 formatters:
   simple:
-    format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-
+    format: "%(asctime)s:%(name)s:%(levelname)s - %(message)s"
+  extended:
+    format: '%(asctime)-20s:%(levelname)-8s:[%(process)d]%(processName)s:%(threadName)s[%(thread)d]:%(pathname)s:%(lineno)d - %(message)s'
+  
 handlers:
   console:
     class: logging.StreamHandler
